@@ -1,0 +1,32 @@
+<?php
+
+declare(strict_types=1);
+
+/**
+ * This file is part of the AuthnetJSON package.
+ *
+ * (c) John Conde <stymiee@gmail.com>
+ *
+ * For the full copyright and license information, please view the LICENSE
+ * file that was distributed with this source code.
+ */
+
+namespace JohnConde\Authnet;
+
+/**
+ * Contains constant values
+ *
+ * @package     AuthnetJSON
+ * @author      John Conde <stymiee@gmail.com>
+ * @copyright   John Conde <stymiee@gmail.com>
+ * @license     http://www.apache.org/licenses/LICENSE-2.0.html Apache License, Version 2.0
+ * @link        https://github.com/stymiee/authnetjson
+ * @see         https://developer.authorize.net/api/reference/
+ */
+class AuthnetJson
+{
+    /**
+     * @var int Subscription of endless length.
+     */
+    const BOUNDLESS_OCCURRENCES = 9999;
+}
