@@ -4,6 +4,7 @@ CHANGE LOG
 --------------------------------------------
 Bumped minimum supported version of PHP to 7.2
 If trying to retrieve non-existent response value, NULL is returned in AuthnetJsonResponse::__get()
+Added AuthnetJson::BOUNDLESS_OCCURRENCES to indicate an endless subscription
 Shiny badges for the README
 Cleaned up HTML and CSS in examples
 Minor formatting changes
